--- a/public/locales/ar/translation.json
+++ b/public/locales/ar/translation.json
@@ -214,6 +214,7 @@
     "taxes": "\u0627\u0644\u0636\u0631\u0627\u0626\u0628",
     "discount": "\u0627\u0644\u062e\u0635\u0645",
     "total": "\u0627\u0644\u0625\u062c\u0645\u0627\u0644\u064a",
+    "shipping": "\u0627\u0644\u0634\u062d\u0646",
     "checkout": "\u062a\u0623\u0643\u064a\u062f \u0627\u0644\u0637\u0644\u0628",
     "processing": "\u062c\u0627\u0631\u064a \u0627\u0644\u0645\u0639\u0627\u0644\u062c\u0629...",
     "currency": "\u062c\u0646\u064a\u0647",
@@ -251,7 +252,10 @@
   },
   "saveAddress": {
     "selectAddress": "\u0627\u062e\u062a\u0631 \u0639\u0646\u0648\u0627\u0646",
-    "addNewAddress": "\u0625\u0636\u0627\u0641\u0629 \u0639\u0646\u0648\u0627\u0646 \u062c\u062f\u064a\u062f"
+    "addNewAddress": "\u0625\u0636\u0627\u0641\u0629 \u0639\u0646\u0648\u0627\u0646 \u062c\u062f\u064a\u062f",
+    "edit": "\u062a\u0639\u062f\u064a\u0644",
+    "delete": "\u062d\u0630\u0641",
+    "zipcode": "\u0627\u0644\u0631\u0645\u0632 \u0627\u0644\u0628\u0631\u064a\u062f\u064a"
   },
   "Address": {
     "deleteDialog": {
@@ -330,7 +334,7 @@
     "selectLanguage": "\u0627\u062e\u062a\u0631 \u0627\u0644\u0644\u063a\u0629"
   },
   "HomeTryApp": {
-    "title": "\u062c\u0631\u0628 \u062a\u0637\u0628\u064a\u0642 {brandName} \u0627\u0644\u0622\u0646!",
+    "title": "\u062c\u0631\u0628 \u062a\u0637\u0628\u064a\u0642 Eshhaar \u0627\u0644\u0622\u0646!",
     "description": "\u0627\u0644\u0622\u0646\u060c \u0627\u0634\u062a\u0631\u0650 \u0648\u0628\u0650\u0639 \u0643\u0644 \u0645\u0627 \u0644\u062f\u064a\u0643\n\u0645\u0646 \u062e\u0644\u0627\u0644 \u062a\u0637\u0628\u064a\u0642\u0646\u0627 \u0627\u0644\u0645\u062d\u0645\u0648\u0644.",
     "googlePlayAlt": "\u062c\u0648\u062c\u0644 \u0628\u0644\u0627\u064a",
     "appStoreAlt": "\u0622\u0628 \u0633\u062a\u0648\u0631",
