orders page translation

--- a/public/locales/ar/translation.json
+++ b/public/locales/ar/translation.json
@@ -413,6 +413,8 @@
     "pending": "\u0642\u064a\u062f \u0627\u0644\u0627\u0646\u062a\u0638\u0627\u0631",
     "shipping": "\u062c\u0627\u0631\u064d \u0627\u0644\u0634\u062d\u0646",
     "processing": "\u062c\u0627\u0631\u064d \u0627\u0644\u0645\u0639\u0627\u0644\u062c\u0629",
-    "cancelled": "\u0645\u0644\u063a\u064a"
+    "cancelled": "\u0645\u0644\u063a\u064a",
+    "noOrders": "لا توجد طلبات بعد",
+    "addOrder": "يرجى إضافة طلبك لتحسين تجربتك"
   }
 }
