--- a/public/locales/ar/translation.json
+++ b/public/locales/ar/translation.json
@@ -245,7 +245,8 @@
     "saveAddress": "\u062d\u0641\u0638 \u0647\u0630\u0627 \u0627\u0644\u0639\u0646\u0648\u0627\u0646 \u0641\u064a \u062d\u0633\u0627\u0628\u064a",
     "saving": "\u062c\u0627\u0631\u064a \u0627\u0644\u062d\u0641\u0638...",
     "updateAddress": "\u062a\u062d\u062f\u064a\u062b \u0627\u0644\u0639\u0646\u0648\u0627\u0646",
-    "addAddress": "\u0625\u0636\u0627\u0641\u0629 \u0639\u0646\u0648\u0627\u0646"
+    "addAddress": "\u0625\u0636\u0627\u0641\u0629 \u0639\u0646\u0648\u0627\u0646",
+    "editAddress":"تعديل العنوان"
   },
   "BillingDetails": {
     "title": "\u062a\u0641\u0627\u0635\u064a\u0644 \u0627\u0644\u0641\u0648\u0627\u062a\u064a\u0631"
