--- a/public/locales/ar/translation.json
+++ b/public/locales/ar/translation.json
@@ -130,7 +130,8 @@
   "Navigation": {
     "home": "\u0627\u0644\u0631\u0626\u064a\u0633\u064a\u0629",
     "products": "\u0627\u0644\u0645\u0646\u062a\u062c\u0627\u062a",
-    "productDetails": "\u062a\u0641\u0627\u0635\u064a\u0644 \u0627\u0644\u0645\u0646\u062a\u062c"
+    "productDetails": "\u062a\u0641\u0627\u0635\u064a\u0644 \u0627\u0644\u0645\u0646\u062a\u062c",
+    "subscribeUs": "اشترك معنا"
   },
   "Cart": {
     "title": "\u0633\u0644\u0629 \u0627\u0644\u062a\u0633\u0648\u0642",
@@ -350,7 +351,8 @@
     "privacyPolicy": "\u0633\u064a\u0627\u0633\u0629 \u0627\u0644\u062e\u0635\u0648\u0635\u064a\u0629",
     "enterYourEmail": "\u0627\u062f\u062e\u0644 \u0628\u0631\u064a\u062f\u0643 \u0627\u0644\u0627\u0644\u0643\u062a\u0631\u0648\u0646\u064a",
     "subscribing": "\u062c\u0627\u0631\u064d \u0627\u0644\u0627\u0634\u062a\u0631\u0627\u0643...",
-    "subscribe": "\u0627\u0634\u062a\u0631\u0643"
+    "subscribe": "\u0627\u0634\u062a\u0631\u0643",
+    "enterEmailPlaceholder": "ادخل بريدك الإالكتروني"
   },
   "Notifications": {
     "notifications": "\u0627\u0644\u0625\u0634\u0639\u0627\u0631\u0627\u062a",
