add review section

--- a/public/locales/ar/translation.json
+++ b/public/locales/ar/translation.json
@@ -398,7 +398,8 @@
     "feedback": "\u201c\u0645\u0644\u0627\u062d\u0638\u0627\u062a\u0643 \u062a\u0647\u0645\u0646\u0627! \u0634\u0627\u0631\u0643\u0646\u0627 \u062a\u0642\u064a\u064a\u0645\u0643.\u201d",
     "comment": "\u062a\u0639\u0644\u064a\u0642",
     "send": "\u0625\u0631\u0633\u0627\u0644",
-    "sending": "\u062c\u0627\u0631\u064d \u0627\u0644\u0625\u0631\u0633\u0627\u0644..."
+    "sending": "\u062c\u0627\u0631\u064d \u0627\u0644\u0625\u0631\u0633\u0627\u0644...",
+    "commentPlaceholder": "اكتب تعليقك هنا..."
   },
   "Orders": {
     "orders": "\u0627\u0644\u0637\u0644\u0628\u0627\u062a",
