--- a/public/locales/ar/translation.json
+++ b/public/locales/ar/translation.json
@@ -186,7 +186,8 @@
     "couponRemoveError": "\u0641\u0634\u0644 \u0641\u064a \u0625\u0632\u0627\u0644\u0629 \u0627\u0644\u0642\u0633\u064a\u0645\u0629",
     "loginRequiredForCart": "\u064a\u0631\u062c\u0649 \u062a\u0633\u062c\u064a\u0644 \u0627\u0644\u062f\u062e\u0648\u0644 \u0644\u0625\u0636\u0627\u0641\u0629 \u0639\u0646\u0627\u0635\u0631 \u0625\u0644\u0649 \u0633\u0644\u062a\u0643",
     "outOfStock": "\u063a\u064a\u0631 \u0645\u062a\u0648\u0641\u0631 \u0641\u064a \u0627\u0644\u0645\u062e\u0632\u0648\u0646",
-    "onlyXAvailable": "\u0641\u0642\u0637 {count} \u0645\u062a\u0648\u0641\u0631 \u0641\u064a \u0627\u0644\u0645\u062e\u0632\u0648\u0646"
+    "onlyXAvailable": "\u0641\u0642\u0637 {count} \u0645\u062a\u0648\u0641\u0631 \u0641\u064a \u0627\u0644\u0645\u062e\u0632\u0648\u0646",
+    "confirmDelete": "هل أنت متأكد أنك تريد حذف العنصر؟"
   },
   "Checkout": {
     "title": "\u0625\u062a\u0645\u0627\u0645 \u0627\u0644\u0637\u0644\u0628",
