--- a/public/locales/ar/translation.json
+++ b/public/locales/ar/translation.json
@@ -91,7 +91,9 @@
     "filterByPrice": "\u062a\u0635\u0641\u064a\u0629 \u062d\u0633\u0628 \u0627\u0644\u0633\u0639\u0631",
     "egp": "\u062c.\u0645",
     "categories": "\u0627\u0644\u0641\u0626\u0627\u062a",
-    "loading": "\u062c\u0627\u0631\u064a \u0627\u0644\u062a\u062d\u0645\u064a\u0644..."
+    "loading": "\u062c\u0627\u0631\u064a \u0627\u0644\u062a\u062d\u0645\u064a\u0644...",
+    "noReviewsYet": "لا توجد مراجعات بعد.",
+    "beTheFirst": "كن أول من يقيّم هذا المنتج."
   },
   "ProductsGrid": {
     "home": "\u0627\u0644\u0631\u0626\u064a\u0633\u064a\u0629",
