reviews for souq

--- a/public/locales/ar/translation.json
+++ b/public/locales/ar/translation.json
@@ -91,7 +91,15 @@
     "filterByPrice": "\u062a\u0635\u0641\u064a\u0629 \u062d\u0633\u0628 \u0627\u0644\u0633\u0639\u0631",
     "egp": "\u062c.\u0645",
     "categories": "\u0627\u0644\u0641\u0626\u0627\u062a",
-    "loading": "\u062c\u0627\u0631\u064a \u0627\u0644\u062a\u062d\u0645\u064a\u0644..."
+    "loading": "\u062c\u0627\u0631\u064a \u0627\u0644\u062a\u062d\u0645\u064a\u0644...",
+    "noReviewsYet": "\u0644\u0627 \u062a\u0648\u062c\u062f \u062a\u0642\u064a\u064a\u0645\u0627\u062a \u0628\u0639\u062f",
+    "beTheFirst": "\u0643\u0646 \u0623\u0648\u0644 \u0645\u0646 \u064a\u0642\u064a\u0645 \u0647\u0630\u0627 \u0627\u0644\u0645\u0646\u062a\u062c!",
+    "reviewSummary": {
+      "ariaLabel": "ملخص تقييم المنتج",
+      "productImageAlt": "صورة المنتج",
+      "heading": "ملخص التقييمات",
+      "starsLabel": "نجوم"
+    }
   },
   "ProductsGrid": {
     "home": "\u0627\u0644\u0631\u0626\u064a\u0633\u064a\u0629",
@@ -247,7 +255,7 @@
     "saving": "\u062c\u0627\u0631\u064a \u0627\u0644\u062d\u0641\u0638...",
     "updateAddress": "\u062a\u062d\u062f\u064a\u062b \u0627\u0644\u0639\u0646\u0648\u0627\u0646",
     "addAddress": "\u0625\u0636\u0627\u0641\u0629 \u0639\u0646\u0648\u0627\u0646",
-    "editAddress":"تعديل العنوان"
+    "editAddress": "تعديل العنوان"
   },
   "BillingDetails": {
     "title": "\u062a\u0641\u0627\u0635\u064a\u0644 \u0627\u0644\u0641\u0648\u0627\u062a\u064a\u0631"
@@ -414,11 +422,19 @@
     "shippingCost": "\u062a\u0643\u0644\u0641\u0629 \u0627\u0644\u0634\u062d\u0646:",
     "taxes": "\u0627\u0644\u0636\u0631\u0627\u0626\u0628:",
     "total": "\u0627\u0644\u0625\u062c\u0645\u0627\u0644\u064a",
-    "pending": "\u0642\u064a\u062f \u0627\u0644\u0627\u0646\u062a\u0638\u0627\u0631",
+    "pending": "\u0645\u0639\u0644\u0642",
+    "PreOrder": "\u0637\u0644\u0628 \u0645\u0633\u0628\u0642",
+    "confirmed": "\u0645\u0624\u0643\u062f",
+    "ready_for_shipping": "\u062c\u0627\u0647\u0632 \u0644\u0644\u0634\u062d\u0646",
+    "in_shipping": "\u0641\u064a \u0627\u0644\u0634\u062d\u0646",
     "shipping": "\u062c\u0627\u0631\u064d \u0627\u0644\u0634\u062d\u0646",
     "processing": "\u062c\u0627\u0631\u064d \u0627\u0644\u0645\u0639\u0627\u0644\u062c\u0629",
+    "completed": "\u0645\u0643\u062a\u0645\u0644",
     "cancelled": "\u0645\u0644\u063a\u064a",
     "noOrders": "لا توجد طلبات بعد",
-    "addOrder": "يرجى إضافة طلبك لتحسين تجربتك"
+    "addOrder": "يرجى إضافة طلبك لتحسين تجربتك",
+    "cancel": "إلغاء",
+    "confirmCancel": "هل أنت متأكد أنك تريد إلغاء هذا الطلب؟",
+    "confirm": "تأكيد"
   }
 }
