--- a/public/locales/ar/translation.json
+++ b/public/locales/ar/translation.json
@@ -270,7 +270,7 @@
   "Address": {
     "deleteDialog": {
       "title": "\u062d\u0630\u0641 \u0627\u0644\u0639\u0646\u0648\u0627\u0646",
-      "description": "\u0647\u0644 \u0623\u0646\u062a \u0645\u062a\u0623\u0643\u062f \u0623\u0646\u0643 \u062a\u0631\u064a\u062f \u062d\u0630\u0641 \"{title}\"\u061f \u0644\u0627 \u064a\u0645\u0643\u0646 \u0627\u0644\u062a\u0631\u0627\u062c\u0639 \u0639\u0646 \u0647\u0630\u0627 \u0627\u0644\u0625\u062c\u0631\u0627\u0621.",
+      "description": "هل أنت متأكد أنك تريد حذف هذا العنوان ؟ لا يمكن التراجع عن هذا الاجراء",
       "yes": "\u0646\u0639\u0645\u060c \u0627\u062d\u0630\u0641",
       "no": "\u0625\u0644\u063a\u0627\u0621"
     }
