--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -269,7 +269,7 @@
   "Address": {
     "deleteDialog": {
       "title": "Delete Address",
-      "description": "Are you sure you want to delete \"{title}\"? This action cannot be undone.",
+      "description": "Are you sure you want to delete this address ? This action cannot be undone.",
       "yes": "Yes, Delete",
       "no": "Cancel"
     }
