--- a/public/locales/ar/translation.json
+++ b/public/locales/ar/translation.json
@@ -407,7 +407,8 @@
     "comment": "\u062a\u0639\u0644\u064a\u0642",
     "send": "\u0625\u0631\u0633\u0627\u0644",
     "sending": "\u062c\u0627\u0631\u064d \u0627\u0644\u0625\u0631\u0633\u0627\u0644...",
-    "commentPlaceholder": "اكتب تعليقك هنا..."
+    "commentPlaceholder": "اكتب تعليقك هنا...",
+    "reviewed": "تمت المراجعة"
   },
   "Orders": {
     "orders": "\u0627\u0644\u0637\u0644\u0628\u0627\u062a",
