add subscribe us section & footer translation

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -359,7 +359,8 @@
     "enterYourEmail": "Enter your email",
     "subscribing": "Subscribing...",
     "subscribe": "Subscribe",
-    "enterEmailPlaceholder": "Enter your email"
+    "enterEmailPlaceholder": "Enter your email",
+    "footerDescribtion": "High-quality products that make your life better."
   },
   "Notifications": {
     "notifications": "Notifications",
