--- a/public/locales/ar/translation.json
+++ b/public/locales/ar/translation.json
@@ -360,7 +360,8 @@
     "enterYourEmail": "\u0627\u062f\u062e\u0644 \u0628\u0631\u064a\u062f\u0643 \u0627\u0644\u0627\u0644\u0643\u062a\u0631\u0648\u0646\u064a",
     "subscribing": "\u062c\u0627\u0631\u064d \u0627\u0644\u0627\u0634\u062a\u0631\u0627\u0643...",
     "subscribe": "\u0627\u0634\u062a\u0631\u0643",
-    "enterEmailPlaceholder": "ادخل بريدك الإالكتروني"
+    "enterEmailPlaceholder": "ادخل بريدك الإالكتروني",
+    "footerDescribtion": "منتجات عالية الجودة تجعل حياتك أفضل."
   },
   "Notifications": {
     "notifications": "\u0627\u0644\u0625\u0634\u0639\u0627\u0631\u0627\u062a",
