--- a/public/locales/ar/translation.json
+++ b/public/locales/ar/translation.json
@@ -409,7 +409,10 @@
     "send": "\u0625\u0631\u0633\u0627\u0644",
     "sending": "\u062c\u0627\u0631\u064d \u0627\u0644\u0625\u0631\u0633\u0627\u0644...",
     "commentPlaceholder": "اكتب تعليقك هنا...",
-    "reviewed": "تمت المراجعة"
+    "reviewed": "تمت المراجعة",
+    "loadingAddressess": "جار تحميل العناوين",
+    "loadingFav": "جار تحميل المفضلة",
+    "loadingOrders": "جار تحميل الطلبات"
   },
   "Orders": {
     "orders": "\u0627\u0644\u0637\u0644\u0628\u0627\u062a",
