--- a/public/locales/ar/translation.json
+++ b/public/locales/ar/translation.json
@@ -180,7 +180,7 @@
     "saveOffer": "\u0648\u0641\u0631 {amount} {currency} ({percent}% \u062e\u0635\u0645)",
     "loginToCheckout": "\u064a\u0631\u062c\u0649 \u062a\u0633\u062c\u064a\u0644 \u0627\u0644\u062f\u062e\u0648\u0644 \u0644\u0625\u062a\u0645\u0627\u0645 \u0627\u0644\u0637\u0644\u0628",
     "loginRequired": "\u062a\u0633\u062c\u064a\u0644 \u0627\u0644\u062f\u062e\u0648\u0644 \u0645\u0637\u0644\u0648\u0628",
-    "addToCartSentence": "\u062a\u0645\u062a \u0625\u0636\u0627\u0641\u0629 {product} \u0625\u0644\u0649 \u0633\u0644\u062a\u0643",
+    "addToCartSentence": "\u062a\u0645\u062a \u0625\u0636\u0627\u0641\u0629 المنتج \u0625\u0644\u0649 \u0633\u0644\u062a\u0643",
     "viewCart": "\u0639\u0631\u0636 \u0627\u0644\u0633\u0644\u0629",
     "failedToAdd": "\u0641\u0634\u0644 \u0641\u064a \u0625\u0636\u0627\u0641\u0629 \u0627\u0644\u0639\u0646\u0635\u0631 \u0625\u0644\u0649 \u0627\u0644\u0633\u0644\u0629",
     "updatedQuantity": "\u062a\u0645 \u062a\u062d\u062f\u064a\u062b \u0643\u0645\u064a\u0629 {productName} \u0625\u0644\u0649 {quantity}",
