--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -103,7 +103,8 @@
       "productImageAlt": "Product Image",
       "heading": "Review Summary",
       "starsLabel": "stars"
-    }
+    },
+    "tapToExpand": "Tap to expand"
   },
   "ProductsGrid": {
     "home": "Home",
