--- a/public/locales/ar/translation.json
+++ b/public/locales/ar/translation.json
@@ -413,7 +413,9 @@
     "reviewed": "تمت المراجعة",
     "loadingAddressess": "جار تحميل العناوين",
     "loadingFav": "جار تحميل المفضلة",
-    "loadingOrders": "جار تحميل الطلبات"
+    "loadingOrders": "جار تحميل الطلبات",
+    "noAddress": "لا توجد عناوين بعد",
+    "noAddressDes": "يرجى إضافة عناوينك لتحسين تجربتك"
   },
   "Orders": {
     "orders": "\u0627\u0644\u0637\u0644\u0628\u0627\u062a",
