--- a/public/locales/ar/translation.json
+++ b/public/locales/ar/translation.json
@@ -361,7 +361,14 @@
     "subscribing": "\u062c\u0627\u0631\u064d \u0627\u0644\u0627\u0634\u062a\u0631\u0627\u0643...",
     "subscribe": "\u0627\u0634\u062a\u0631\u0643",
     "enterEmailPlaceholder": "ادخل بريدك الإالكتروني",
-    "footerDescribtion": "منتجات عالية الجودة تجعل حياتك أفضل."
+    "footerDescribtion": "منتجات عالية الجودة تجعل حياتك أفضل.",
+    "invalidEmail": "يرجى إدخال عنوان بريد إلكتروني صالح",
+    "subscribeSuccess": "تم الاشتراك بنجاح في نشرتنا الإخبارية!",
+    "subscribeFailed": "فشل الاشتراك. حاول مرة أخرى.",
+    "subscribeModalTitle": "ابقَ على اطلاع!",
+    "subscribeModalDescription": "اشترك في نشرتنا الإخبارية واحصل على آخر التحديثات والعروض الحصرية والعروض الترويجية الخاصة التي يتم تسليمها مباشرة إلى صندوق بريدك الوارد.",
+    "subscribeModalClose": "إغلاق",
+    "subscribeModalNoThanks": "لا، شكراً"
   },
   "Notifications": {
     "notifications": "\u0627\u0644\u0625\u0634\u0639\u0627\u0631\u0627\u062a",
