--- a/public/locales/ar/translation.json
+++ b/public/locales/ar/translation.json
@@ -141,6 +141,19 @@
     "productDetails": "\u062a\u0641\u0627\u0635\u064a\u0644 \u0627\u0644\u0645\u0646\u062a\u062c",
     "subscribeUs": "اشترك معنا"
   },
+  "Toasts": {
+    "invalidRequest": "طلب غير صالح. يرجى التحقق من معلوماتك والمحاولة مرة أخرى.",
+    "pleaseLogin": "يرجى تسجيل الدخول للمتابعة.",
+    "permissionDenied": "ليس لديك الإذن لأداء هذا الإجراء.",
+    "notFound": "المورد المطلوب لم يتم العثور عليه.",
+    "validationError": "يرجى التحقق من مدخلاتك والمحاولة مرة أخرى.",
+    "serverError": "حدث خطأ في الخادم. يرجى المحاولة لاحقاً.",
+    "serviceUnavailable": "الخدمة غير متاحة حالياً. يرجى المحاولة لاحقاً.",
+    "networkError": "خطأ في الشبكة. يرجى التحقق من الاتصال والمحاولة مرة أخرى.",
+    "tryAgain": "يرجى المحاولة مرة أخرى.",
+    "success": "تم بنجاح",
+    "error": "حدث خطأ"
+  },
   "Cart": {
     "title": "\u0633\u0644\u0629 \u0627\u0644\u062a\u0633\u0648\u0642",
     "emptyCart": "\u0633\u0644\u062a\u0643 \u0641\u0627\u0631\u063a\u0629",
