--- a/public/locales/ar/translation.json
+++ b/public/locales/ar/translation.json
@@ -1,5 +1,6 @@
 {
   "Common": {
+    "selected": "\u0627\u0644\u0645\u062e\u062a\u0627\u0631",
     "language": "\u0627\u0644\u0644\u063a\u0629",
     "currency": "\u062c.\u0645",
     "email": "\u0627\u0644\u0628\u0631\u064a\u062f \u0627\u0644\u0625\u0644\u0643\u062a\u0631\u0648\u0646\u064a",
