footer translation fixers

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -57,7 +57,7 @@
     "home": "Home",
     "products": "Products",
     "productDetails": "Product Details",
-    "subscribeUs": "Subscribe us"
+    "subscribeUs": "Subscribe to us"
   },
   "Toasts": {
     "invalidRequest": "Invalid request. Please check your information and try again.",
