--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -86,6 +86,7 @@
     "viewAllProducts": "View All Products",
     "failedToLoad": "Failed to load products",
     "recommendedForYou": "Recommended For You",
+    "recentlyViewed": "Recently Viewed",
     "addToCart": "Add to Cart",
     "addedToCart": "Added to Cart",
     "outOfStock": "Out of Stock",
