translate top rated

--- a/public/locales/ar/translation.json
+++ b/public/locales/ar/translation.json
@@ -103,7 +103,8 @@
       "heading": "ملخص التقييمات",
       "starsLabel": "نجوم"
     },
-    "tapToExpand": "انقر للتوسع"
+    "tapToExpand": "انقر للتوسع",
+    "topRated": "الأعلى تقييمًا"
   },
   "ProductsGrid": {
     "home": "\u0627\u0644\u0631\u0626\u064a\u0633\u064a\u0629",
