--- a/public/locales/ar/translation.json
+++ b/public/locales/ar/translation.json
@@ -104,7 +104,9 @@
       "starsLabel": "نجوم"
     },
     "tapToExpand": "انقر للتوسع",
-    "topRated": "الأعلى تقييمًا"
+    "topRated": "الأعلى تقييمًا",
+    "guideImage": "صورة إرشادية",
+    "close": "إغلاق"
   },
   "ProductsGrid": {
     "home": "\u0627\u0644\u0631\u0626\u064a\u0633\u064a\u0629",
