--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -123,7 +123,9 @@
       "starsLabel": "stars"
     },
     "tapToExpand": "Tap to expand",
-    "topRated": "Top rated"
+    "topRated": "Top rated",
+    "guideImage": "Guide image",
+    "close": "Close"
   },
   "ProductsGrid": {
     "home": "Home",
