--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -308,7 +308,7 @@
     "rememberMe": "Remember Me",
     "loginSuccess": "Login successful! Welcome back.",
     "loginError": "Login failed",
-    "welcome": "Welcome back to Souq4u",
+    "welcome": "Welcome back to Souq4u!",
     "enterPhone": "Enter your phone",
     "phoneRequired": "Please enter your phone number",
     "signingIn": "Signing In...",
