--- a/public/locales/ar/translation.json
+++ b/public/locales/ar/translation.json
@@ -106,7 +106,8 @@
     "tapToExpand": "انقر للتوسع",
     "topRated": "الأعلى تقييمًا",
     "guideImage": "صورة إرشادية",
-    "close": "إغلاق"
+    "close": "إغلاق",
+    "off": "خصم"
   },
   "ProductsGrid": {
     "home": "\u0627\u0644\u0631\u0626\u064a\u0633\u064a\u0629",
