--- a/public/locales/ar/translation.json
+++ b/public/locales/ar/translation.json
@@ -359,7 +359,10 @@
     "errorGeneric": "\u062d\u062f\u062b \u062e\u0637\u0623. \u064a\u0631\u062c\u0649 \u0627\u0644\u0645\u062d\u0627\u0648\u0644\u0629 \u0645\u0631\u0629 \u0623\u062e\u0631\u0649 \u0644\u0627\u062d\u0642\u0627\u064b.",
     "errorNameRequired": "\u0627\u0644\u0627\u0633\u0645 \u0645\u0637\u0644\u0648\u0628",
     "errorPhoneRequired": "\u0631\u0642\u0645 \u0627\u0644\u0647\u0627\u062a\u0641 \u0645\u0637\u0644\u0648\u0628",
-    "errorMessageRequired": "\u0627\u0644\u0631\u0633\u0627\u0644\u0629 \u0645\u0637\u0644\u0648\u0628\u0629"
+    "errorMessageRequired": "\u0627\u0644\u0631\u0633\u0627\u0644\u0629 \u0645\u0637\u0644\u0648\u0628\u0629",
+    "errorNameTooShort": "يجب أن يحتوي الاسم على 3 أحرف على الأقل.",
+    "errorPhoneInvalid": "يرجى إدخال رقم هاتف صالح.",
+    "errorMessageTooShort": "يجب أن تحتوي الرسالة على 10 أحرف على الأقل."
   },
   "Header": {
     "switchLanguage": "\u062a\u063a\u064a\u064a\u0631 \u0627\u0644\u0644\u063a\u0629",
