--- a/public/locales/ar/translation.json
+++ b/public/locales/ar/translation.json
@@ -405,6 +405,7 @@
   "Profile": {
     "title": "\u0645\u0644\u0641\u064a \u0627\u0644\u0634\u062e\u0635\u064a",
     "account": "\u062d\u0633\u0627\u0628\u064a",
+    "email": "البريد الإلكتروني",
     "phone": "\u0631\u0642\u0645 \u0627\u0644\u0647\u0627\u062a\u0641",
     "updateSuccess": "\u062a\u0645 \u062a\u062d\u062f\u064a\u062b \u0627\u0644\u0645\u0644\u0641 \u0627\u0644\u0634\u062e\u0635\u064a \u0628\u0646\u062c\u0627\u062d!",
     "updateFailed": "\u0641\u0634\u0644 \u0641\u064a \u062a\u062d\u062f\u064a\u062b \u0627\u0644\u0645\u0644\u0641 \u0627\u0644\u0634\u062e\u0635\u064a",
