--- a/public/locales/ar/translation.json
+++ b/public/locales/ar/translation.json
@@ -257,7 +257,7 @@
     "comingSoon": "\u0642\u0631\u064a\u0628\u0627\u064b"
   },
   "AddressForm": {
-    "title": "\u0639\u0646\u0648\u0627\u0646 \u0627\u0644\u0639\u0646\u0648\u0627\u0646",
+    "title": "اسم العنوان",
     "titlePlaceholder": "\u0645\u062b\u0627\u0644: \u0627\u0644\u0645\u0646\u0632\u0644\u060c \u0627\u0644\u0645\u0643\u062a\u0628\u060c \u0625\u0644\u062e.",
     "fullName": "\u0627\u0644\u0627\u0633\u0645 \u0627\u0644\u0643\u0627\u0645\u0644",
     "fullNamePlaceholder": "\u0623\u062f\u062e\u0644 \u0627\u0633\u0645\u0643 \u0627\u0644\u0643\u0627\u0645\u0644",
