--- a/public/locales/ar/translation.json
+++ b/public/locales/ar/translation.json
@@ -207,7 +207,7 @@
     "failedToAdd": "\u0641\u0634\u0644 \u0641\u064a \u0625\u0636\u0627\u0641\u0629 \u0627\u0644\u0639\u0646\u0635\u0631 \u0625\u0644\u0649 \u0627\u0644\u0633\u0644\u0629",
     "updatedQuantity": "\u062a\u0645 \u062a\u062d\u062f\u064a\u062b \u0643\u0645\u064a\u0629 {productName} \u0625\u0644\u0649 {quantity}",
     "failedUpdateQuantity": "\u0641\u0634\u0644 \u0641\u064a \u062a\u062d\u062f\u064a\u062b \u0643\u0645\u064a\u0629 {productName}",
-    "removedFromCart": "\u062a\u0645\u062a \u0625\u0632\u0627\u0644\u0629 {productName} \u0645\u0646 \u0627\u0644\u0633\u0644\u0629",
+    "removedFromCart": "تمت إزالة {{productName}} من السلة",
     "failedRemoveFromCart": "\u0641\u0634\u0644 \u0641\u064a \u0625\u0632\u0627\u0644\u0629 {productName}",
     "couponAppliedSuccess": "\u062a\u0645 \u062a\u0637\u0628\u064a\u0642 \u0627\u0644\u0642\u0633\u064a\u0645\u0629 \u0628\u0646\u062c\u0627\u062d",
     "couponApplyError": "\u0641\u0634\u0644 \u0641\u064a \u062a\u0637\u0628\u064a\u0642 \u0627\u0644\u0642\u0633\u064a\u0645\u0629",
