--- a/public/locales/ar/translation.json
+++ b/public/locales/ar/translation.json
@@ -205,7 +205,7 @@
     "addToCartSentence": "\u062a\u0645\u062a \u0625\u0636\u0627\u0641\u0629 المنتج \u0625\u0644\u0649 \u0633\u0644\u062a\u0643",
     "viewCart": "\u0639\u0631\u0636 \u0627\u0644\u0633\u0644\u0629",
     "failedToAdd": "\u0641\u0634\u0644 \u0641\u064a \u0625\u0636\u0627\u0641\u0629 \u0627\u0644\u0639\u0646\u0635\u0631 \u0625\u0644\u0649 \u0627\u0644\u0633\u0644\u0629",
-    "updatedQuantity": "\u062a\u0645 \u062a\u062d\u062f\u064a\u062b \u0643\u0645\u064a\u0629 {productName} \u0625\u0644\u0649 {quantity}",
+    "updatedQuantity": "تم تحديث كمية {{productName}} إلى {{quantity}}",
     "failedUpdateQuantity": "\u0641\u0634\u0644 \u0641\u064a \u062a\u062d\u062f\u064a\u062b \u0643\u0645\u064a\u0629 {productName}",
     "removedFromCart": "تمت إزالة {{productName}} من السلة",
     "failedRemoveFromCart": "\u0641\u0634\u0644 \u0641\u064a \u0625\u0632\u0627\u0644\u0629 {productName}",
