fixes cart functionalities in product details

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -88,6 +88,7 @@
     "recommendedForYou": "Recommended For You",
     "recentlyViewed": "Recently Viewed",
     "addToCart": "Add to Cart",
+    "updateCart": "Update Cart",
     "addedToCart": "Added to Cart",
     "outOfStock": "Out of Stock",
     "price": "Price",
@@ -202,7 +203,8 @@
     "saveOffer": "Save {amount} {currency} ({percent}% off)",
     "loginToCheckout": "Please login to checkout",
     "loginRequired": "Login Required",
-    "addToCartSentence": "Product added to your cart",
+    "addToCartSentence": "{{product}} added to your cart",
+    "updateCartSentence": "Updated {{product}} in your cart to {{quantity}}",
     "viewCart": "View Cart",
     "failedToAdd": "Failed to add item to cart",
     "updatedQuantity": "Updated {{productName}} quantity to {{quantity}}",
