--- a/public/locales/ar/translation.json
+++ b/public/locales/ar/translation.json
@@ -68,6 +68,7 @@
     "recommendedForYou": "\u0645\u0648\u0635\u0649 \u0644\u0643",
     "recentlyViewed": "\u0627\u0644\u0645\u0646\u062a\u062c\u0627\u062a \u0627\u0644\u0645\u0634\u0627\u0647\u062f\u0629 \u0645\u0624\u062e\u0631\u0627\u064b",
     "addToCart": "\u0623\u0636\u0641 \u0625\u0644\u0649 \u0627\u0644\u0633\u0644\u0629",
+    "updateCart": "\u062a\u062d\u062f\u064a\u062b \u0627\u0644\u0633\u0644\u0629",
     "addedToCart": "\u062a\u0645\u062a \u0627\u0644\u0625\u0636\u0627\u0641\u0629 \u0625\u0644\u0649 \u0627\u0644\u0633\u0644\u0629",
     "outOfStock": "\u063a\u064a\u0631 \u0645\u062a\u0648\u0641\u0631",
     "price": "\u0627\u0644\u0633\u0639\u0631",
@@ -202,7 +203,8 @@
     "saveOffer": "\u0648\u0641\u0631 {amount} {currency} ({percent}% \u062e\u0635\u0645)",
     "loginToCheckout": "\u064a\u0631\u062c\u0649 \u062a\u0633\u062c\u064a\u0644 \u0627\u0644\u062f\u062e\u0648\u0644 \u0644\u0625\u062a\u0645\u0627\u0645 \u0627\u0644\u0637\u0644\u0628",
     "loginRequired": "\u062a\u0633\u062c\u064a\u0644 \u0627\u0644\u062f\u062e\u0648\u0644 \u0645\u0637\u0644\u0648\u0628",
-    "addToCartSentence": "\u062a\u0645\u062a \u0625\u0636\u0627\u0641\u0629 المنتج \u0625\u0644\u0649 \u0633\u0644\u062a\u0643",
+    "addToCartSentence": "\u062a\u0645\u062a \u0625\u0636\u0627\u0641\u0629 {{product}} \u0625\u0644\u0649 \u0633\u0644\u062a\u0643",
+    "updateCartSentence": "\u062a\u0645 \u062a\u062d\u062f\u064a\u062b {{product}} \u0641\u064a \u0633\u0644\u062a\u0643 \u0625\u0644\u0649 {{quantity}}",
     "viewCart": "\u0639\u0631\u0636 \u0627\u0644\u0633\u0644\u0629",
     "failedToAdd": "\u0641\u0634\u0644 \u0641\u064a \u0625\u0636\u0627\u0641\u0629 \u0627\u0644\u0639\u0646\u0635\u0631 \u0625\u0644\u0649 \u0627\u0644\u0633\u0644\u0629",
     "updatedQuantity": "تم تحديث كمية {{productName}} إلى {{quantity}}",
