whole order and track order in profile

--- a/public/locales/ar/translation.json
+++ b/public/locales/ar/translation.json
@@ -478,6 +478,7 @@
     "addOrder": "يرجى إضافة طلبك لتحسين تجربتك",
     "cancel": "إلغاء",
     "confirmCancel": "هل أنت متأكد أنك تريد إلغاء هذا الطلب؟",
-    "confirm": "تأكيد"
+    "confirm": "تأكيد",
+    "cancelling": "جار الإلغاء"
   }
 }
