--- a/public/locales/ar/translation.json
+++ b/public/locales/ar/translation.json
@@ -450,7 +450,22 @@
     "loadingFav": "جار تحميل المفضلة",
     "loadingOrders": "جار تحميل الطلبات",
     "noAddress": "لا توجد عناوين بعد",
-    "noAddressDes": "يرجى إضافة عناوينك لتحسين تجربتك"
+    "noAddressDes": "يرجى إضافة عناوينك لتحسين تجربتك",
+    "reviewSuccess": "تم إرسال التقييم بنجاح!",
+    "reviewError": "فشل في إرسال المراجعة",
+    "ratingRequired": "يرجى اختيار التقييم",
+    "language": "اللغة",
+    "darkMode": "الوضع الداكن",
+    "privacy": "سياسة الخصوصية",
+    "terms": "الشروط والأحكام",
+    "contactUs": "تواصل معنا",
+    "myAccount": "حسابي",
+    "accountInfo": "معلومات الحساب",
+    "changeEmail": "تغيير البريد الالكتروني",
+    "saveAddress": "حفظ العنوان",
+    "enterEmail": "ادخل بريدك الالكتروني",
+    "password": "كلمة المرور",
+    "save": "حفظ"
   },
   "Orders": {
     "orders": "\u0627\u0644\u0637\u0644\u0628\u0627\u062a",
