add most viewed text - products page

--- a/public/locales/ar/translation.json
+++ b/public/locales/ar/translation.json
@@ -108,7 +108,8 @@
     "topRated": "الأعلى تقييمًا",
     "guideImage": "صورة إرشادية",
     "close": "إغلاق",
-    "off": "خصم"
+    "off": "خصم",
+    "mostViewedProducts": "المنتجات الأكثر مشاهدة"
   },
   "ProductsGrid": {
     "home": "\u0627\u0644\u0631\u0626\u064a\u0633\u064a\u0629",
