--- a/public/locales/ar/translation.json
+++ b/public/locales/ar/translation.json
@@ -109,7 +109,8 @@
     "guideImage": "صورة إرشادية",
     "close": "إغلاق",
     "off": "خصم",
-    "mostViewedProducts": "المنتجات الأكثر مشاهدة"
+    "mostViewedProducts": "المنتجات الأكثر مشاهدة",
+    "bestOffersProducts": "أفضل عروض المنتجات"
   },
   "ProductsGrid": {
     "home": "\u0627\u0644\u0631\u0626\u064a\u0633\u064a\u0629",
