--- a/public/locales/ar/translation.json
+++ b/public/locales/ar/translation.json
@@ -367,7 +367,11 @@
     "errorMessageRequired": "\u0627\u0644\u0631\u0633\u0627\u0644\u0629 \u0645\u0637\u0644\u0648\u0628\u0629",
     "errorNameTooShort": "يجب أن يحتوي الاسم على 3 أحرف على الأقل.",
     "errorPhoneInvalid": "يرجى إدخال رقم هاتف صالح.",
-    "errorMessageTooShort": "يجب أن تحتوي الرسالة على 10 أحرف على الأقل."
+    "errorMessageTooShort": "يجب أن تحتوي الرسالة على 10 أحرف على الأقل.",
+    "errorNameLettersOnly": "يُسمح فقط بالحروف العربية أو الإنجليزية.",
+    "errorNameTooLong": "الاسم يجب ألا يزيد عن 100 حرف.",
+    "errorEmailInvalid": "صيغة البريد الإلكتروني غير صحيحة.",
+    "errorMessageTooLong": "الرسالة يجب ألا تتجاوز 1000 حرف."
   },
   "Header": {
     "switchLanguage": "\u062a\u063a\u064a\u064a\u0631 \u0627\u0644\u0644\u063a\u0629",
