--- a/public/locales/ar/translation.json
+++ b/public/locales/ar/translation.json
@@ -150,7 +150,10 @@
     "home": "\u0627\u0644\u0631\u0626\u064a\u0633\u064a\u0629",
     "products": "\u0627\u0644\u0645\u0646\u062a\u062c\u0627\u062a",
     "productDetails": "\u062a\u0641\u0627\u0635\u064a\u0644 \u0627\u0644\u0645\u0646\u062a\u062c",
-    "subscribeUs": "اشترك معنا"
+    "subscribeUs": "اشترك معنا",
+    "favorites": "المفضلة",
+    "cart": "سلة التسوق",
+    "profile": "\u0627\u0644\u0645\u0644\u0641 \u0627\u0644\u0634\u062e\u0635\u064a"
   },
   "Toasts": {
     "invalidRequest": "طلب غير صالح. يرجى التحقق من معلوماتك والمحاولة مرة أخرى.",
