--- a/public/locales/ar/translation.json
+++ b/public/locales/ar/translation.json
@@ -155,7 +155,8 @@
     "subscribeUs": "اشترك معنا",
     "favorites": "المفضلة",
     "cart": "سلة التسوق",
-    "profile": "\u0627\u0644\u0645\u0644\u0641 \u0627\u0644\u0634\u062e\u0635\u064a"
+    "profile": "\u0627\u0644\u0645\u0644\u0641 \u0627\u0644\u0634\u062e\u0635\u064a",
+    "mustLoggin": "يجب عليك تسجيل الدخول أولاً"
   },
   "Toasts": {
     "invalidRequest": "طلب غير صالح. يرجى التحقق من معلوماتك والمحاولة مرة أخرى.",
