add missed data at account

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -477,7 +477,10 @@
     "saveAddress": "Save Address",
     "enterEmail": "Enter new email",
     "password": "Password",
-    "save": "Save"
+    "save": "Save",
+    "birthday": "Birthday",
+    "selectDate": "Select date",
+    "gender": "Gender"
   },
   "Orders": {
     "orders": "Orders",
