--- a/public/locales/ar/translation.json
+++ b/public/locales/ar/translation.json
@@ -477,7 +477,10 @@
     "saveAddress": "حفظ العنوان",
     "enterEmail": "ادخل بريدك الالكتروني",
     "password": "كلمة المرور",
-    "save": "حفظ"
+    "save": "حفظ",
+    "birthday": "تاريخ الميلاد",
+    "selectDate": "اختر التاريخ",
+    "gender": "النوع"
   },
   "Orders": {
     "orders": "\u0627\u0644\u0637\u0644\u0628\u0627\u062a",
