--- a/public/locales/ar/translation.json
+++ b/public/locales/ar/translation.json
@@ -480,7 +480,8 @@
     "save": "حفظ",
     "birthday": "تاريخ الميلاد",
     "selectDate": "اختر التاريخ",
-    "gender": "النوع"
+    "gender": "النوع",
+    "addressAdded": "تم إضافة العنوان بنجاح"
   },
   "Orders": {
     "orders": "\u0627\u0644\u0637\u0644\u0628\u0627\u062a",
