send birthday and gender at profile

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -481,7 +481,9 @@
     "birthday": "Birthday",
     "selectDate": "Select date",
     "gender": "Gender",
-    "addressAdded": "Address added successfully"
+    "addressAdded": "Address added successfully",
+    "male": "Male",
+    "female": "Female"
   },
   "Orders": {
     "orders": "Orders",
