--- a/public/locales/ar/translation.json
+++ b/public/locales/ar/translation.json
@@ -481,7 +481,9 @@
     "birthday": "تاريخ الميلاد",
     "selectDate": "اختر التاريخ",
     "gender": "النوع",
-    "addressAdded": "تم إضافة العنوان بنجاح"
+    "addressAdded": "تم إضافة العنوان بنجاح",
+    "male": "ذكر",
+    "female": "أنثى"
   },
   "Orders": {
     "orders": "\u0627\u0644\u0637\u0644\u0628\u0627\u062a",
