--- a/public/locales/ar/translation.json
+++ b/public/locales/ar/translation.json
@@ -96,6 +96,10 @@
     "filterByPrice": "\u062a\u0635\u0641\u064a\u0629 \u062d\u0633\u0628 \u0627\u0644\u0633\u0639\u0631",
     "egp": "\u062c.\u0645",
     "categories": "\u0627\u0644\u0641\u0626\u0627\u062a",
+    "color": "اللون",
+    "filters": "الفلاتر",
+    "failedToLoadColors": "فشل في تحميل الألوان",
+    "noColorsAvailable": "لا توجد ألوان متاحة",
     "loading": "\u062c\u0627\u0631\u064a \u0627\u0644\u062a\u062d\u0645\u064a\u0644...",
 
     "reviewSummary": {
