--- a/public/locales/ar/translation.json
+++ b/public/locales/ar/translation.json
@@ -92,7 +92,7 @@
     "defaultSorting": "\u0627\u0644\u062a\u0631\u062a\u064a\u0628 \u0627\u0644\u0627\u0641\u062a\u0631\u0627\u0636\u064a",
     "asc": "\u0627\u0644\u0633\u0639\u0631: \u0645\u0646 \u0627\u0644\u0623\u0642\u0644 \u0625\u0644\u0649 \u0627\u0644\u0623\u0639\u0644\u0649",
     "desc": "\u0627\u0644\u0633\u0639\u0631: \u0645\u0646 \u0627\u0644\u0623\u0639\u0644\u0649 \u0625\u0644\u0649 \u0627\u0644\u0623\u0642\u0644",
-    "showingResults": "\u0639\u0631\u0636 {displayed} \u0645\u0646 {total} \u0646\u062a\u064a\u062c\u0629",
+    "showingResults": "عرض {{displayed}} من {{total}} النتائج",
     "filterByPrice": "\u062a\u0635\u0641\u064a\u0629 \u062d\u0633\u0628 \u0627\u0644\u0633\u0639\u0631",
     "egp": "\u062c.\u0645",
     "categories": "\u0627\u0644\u0641\u0626\u0627\u062a",
