fix add address title

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -453,7 +453,7 @@
       "desc": "You can add an item to your favorites by clicking the \"Star\" icon."
     },
     "AddAddress": {
-      "header": "Add Address",
+      "header": "Add New Address",
       "back": "Back"
     },
     "review": "Review",
