--- a/public/locales/ar/translation.json
+++ b/public/locales/ar/translation.json
@@ -488,7 +488,8 @@
     "gender": "النوع",
     "addressAdded": "تم إضافة العنوان بنجاح",
     "male": "ذكر",
-    "female": "أنثى"
+    "female": "أنثى",
+    "savedAddresses": "العناوين المحفوظة"
   },
   "Orders": {
     "orders": "\u0627\u0644\u0637\u0644\u0628\u0627\u062a",
