change checkout page order

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -252,7 +252,7 @@
     "breadcrumbCheckout": "Checkout",
     "cartEmpty": "Your cart is empty",
     "loading": "Loading...",
-    "summary": "Order Summary",
+    "summary": "Summary",
     "totalItem": "Total Items",
     "subtotal": "Subtotal",
     "totalProducts": "Total Products",
