adds expected delivery date

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -520,6 +520,7 @@
     "confirm": "Confirm",
     "cancelling": "Cancelling",
     "itemNumber": "Item number",
-    "orderNumber": "Order number"
+    "orderNumber": "Order number",
+    "deliveryExpect": "Expected Delivery Date"
   }
 }
