handles coupon error

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -209,6 +209,8 @@
     "remove": "Remove",
     "totalItem": "Total Items",
     "totalProducts": "Total Products",
+    "productDiscount": "Product Discount",
+    "couponDiscount": "Coupon Discount",
     "shippingCost": "Shipping Cost",
     "taxes": "Taxes",
     "empty": "Your cart is empty",
@@ -256,6 +258,8 @@
     "totalItem": "Total Items",
     "subtotal": "Subtotal",
     "totalProducts": "Total Products",
+    "productDiscount": "Product Discount",
+    "couponDiscount": "Coupon Discount",
     "taxes": "Taxes",
     "discount": "Discount",
     "total": "Total",
