--- a/public/locales/ar/translation.json
+++ b/public/locales/ar/translation.json
@@ -209,7 +209,7 @@
     "remove": "\u0625\u0632\u0627\u0644\u0629",
     "totalItem": "\u0625\u062c\u0645\u0627\u0644\u064a \u0627\u0644\u0639\u0646\u0627\u0635\u0631",
     "totalProducts": "\u0625\u062c\u0645\u0627\u0644\u064a \u0627\u0644\u0645\u0646\u062a\u062c\u0627\u062a",
-    "productDiscount": "\u062e\u0633\u0645 \u0627\u0644\u0645\u0646\u062a\u062c\u0627\u062a",
+    "productDiscount": "خصم المنتجات",
     "couponDiscount": "\u062e\u0635\u0645 \u0627\u0644\u0643\u0648\u0628\u0648\u0646",
     "shippingCost": "\u062a\u0643\u0644\u0641\u0629 \u0627\u0644\u0634\u062d\u0646",
     "taxes": "\u0627\u0644\u0636\u0631\u0627\u0626\u0628",
