fix delivery address

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -500,7 +500,7 @@
     "id": "ID:",
     "tracking": "Tracking Order",
     "itemSummary": "Item Summary",
-    "deliverdAddress": "Delivered Address",
+    "deliverdAddress": "Delivery Address",
     "orderSummary": "Order Summary",
     "totalItems": "Total Items",
     "item": "Item",
